Fix gap below home page hero image

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -71,7 +71,8 @@ body {
   }
 }
 
-.responsive-image {
+img {
+  display: block;
   width: 100%;
   height: auto;
 }
